--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <main class="container">
-        <h1>Lotto Number Generator</h1>
+        <header class="topbar">
+            <h1>Lotto Number Generator</h1>
+            <button id="theme-toggle" class="theme-toggle" type="button" aria-pressed="false">
+                Dark mode
+            </button>
+        </header>
         <div class="lotto-numbers" id="lotto-numbers"></div>
         <button id="generate-btn">Generate Numbers</button>
     </main>
