Generate 5 lotto games of 6 numbers

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <header class="topbar">
             <div>
                 <p class="eyebrow">Lucky draw</p>
-                <h1>Five-Number Lotto</h1>
-                <p class="subtitle">Press the button to generate a fresh set of five numbers.</p>
+                <h1>Korean Lotto Sets</h1>
+                <p class="subtitle">Press the button to generate five games (6 numbers each).</p>
             </div>
             <button id="theme-toggle" class="theme-toggle" type="button" aria-pressed="false">
                 Dark mode
             </button>
         </header>
-        <ul class="lotto-numbers" id="lotto-numbers" aria-live="polite"></ul>
-        <button id="generate-btn">Generate 5 Numbers</button>
+        <div class="lotto-sets" id="lotto-sets" aria-live="polite"></div>
+        <button id="generate-btn">Generate 5 Games</button>
     </main>
     <script src="main.js"></script>
 </body>
