Transform lotto into dinner recommender

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <main class="container">
         <header class="topbar">
             <div>
-                <p class="eyebrow">Lucky draw</p>
-                <h1>Korean Lotto Sets</h1>
-                <p class="subtitle">Press the button to generate five games (6 numbers each).</p>
+                <p class="eyebrow">Tonight's pick</p>
+                <h1>Dinner Menu Recommender</h1>
+                <p class="subtitle">Press the button to get 5 dinner ideas for tonight.</p>
             </div>
             <button id="theme-toggle" class="theme-toggle" type="button" aria-pressed="false">
                 Dark mode
             </button>
         </header>
-        <div class="lotto-sets" id="lotto-sets" aria-live="polite"></div>
-        <button id="generate-btn">Generate 5 Games</button>
+        <div class="menu-sets" id="menu-sets" aria-live="polite"></div>
+        <button id="generate-btn">Recommend 5 Menus</button>
     </main>
     <script src="main.js"></script>
 </body>
