Load menu photos from TheMealDB

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
                     <p class="menu-art-label">Selected Menu</p>
                     <h2 id="menu-art-title">Pick a menu</h2>
                 </div>
-                <canvas id="menu-art-canvas" width="320" height="240" aria-label="Illustration of the selected menu"></canvas>
+                <div class="menu-art-media">
+                    <img id="menu-art-image" alt="Selected menu photo" loading="lazy">
+                </div>
                 <div class="menu-art-tags" id="menu-art-tags"></div>
-                <p class="menu-art-note" id="menu-art-note">Select a menu to see its illustrated plate.</p>
+                <p class="menu-art-note" id="menu-art-note">Select a menu to load its photo.</p>
+                <p class="menu-art-credit">Image source: TheMealDB</p>
             </section>
         </div>
         <button id="generate-btn">Recommend 5 Menus</button>
