Add AdSense verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-7713287823701747">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가위 바위 보 AI 대결</title>
     <link rel="stylesheet" href="style.css">
