--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
             <a href="index.html#guide">사용법</a>
             <a href="index.html#model">모델</a>
             <a href="index.html#faq">FAQ</a>
+            <a href="resources.html">리소스</a>
             <a href="about.html" aria-current="page">소개</a>
             <a href="privacy.html">개인정보</a>
             <a href="terms.html">이용약관</a>
@@ -91,6 +92,7 @@
             </div>
             <div class="footer-links">
                 <a href="index.html">홈</a>
+                <a href="resources.html">리소스</a>
                 <a href="privacy.html">개인정보처리방침</a>
                 <a href="terms.html">이용약관</a>
                 <a href="contact.html">문의</a>
