--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
         <nav class="nav">
             <a href="index.html">홈</a>
             <a href="about.html">소개</a>
+            <a href="resources.html">리소스</a>
             <a href="privacy.html">개인정보</a>
             <a href="terms.html">이용약관</a>
             <a href="contact.html" aria-current="page">문의</a>
@@ -55,6 +56,7 @@
             <div class="footer-links">
                 <a href="index.html">홈</a>
                 <a href="about.html">소개</a>
+                <a href="resources.html">리소스</a>
                 <a href="privacy.html">개인정보처리방침</a>
                 <a href="terms.html">이용약관</a>
             </div>
