--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <a href="#play">플레이</a>
             <a href="#guide">사용법</a>
             <a href="#model">모델 소개</a>
+            <a href="#trust">신뢰와 안전</a>
             <a href="#faq">FAQ</a>
+            <a href="resources.html">리소스</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보</a>
             <a href="terms.html">이용약관</a>
@@ -107,12 +109,36 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <p class="timeline-date">2026-02-22</p>
-                    <p class="timeline-text">사이트 구조와 안내 콘텐츠를 강화하고, 개인정보 및 이용약관 페이지를 추가했습니다.</p>
+                    <p class="timeline-text">사이트 구조, 안내 콘텐츠, 정책 페이지를 강화하고 리소스 문서를 추가했습니다.</p>
                 </div>
                 <div class="timeline-item">
                     <p class="timeline-date">2026-02-07</p>
                     <p class="timeline-text">기본 UI와 다크모드 토글, Teachable Machine 연동을 적용했습니다.</p>
                 </div>
+            </div>
+        </section>
+
+        <section id="trust" class="section">
+            <div class="section-head">
+                <h2>신뢰와 안전</h2>
+                <p class="section-subtitle">사용자에게 가치 있는 정보와 경험을 제공하기 위한 원칙입니다.</p>
+            </div>
+            <div class="card-grid">
+                <article class="card">
+                    <h3>콘텐츠 중심</h3>
+                    <p>게임 체험과 설명 콘텐츠를 핵심으로 구성했습니다. 빈 페이지나 중복 콘텐츠를 만들지 않습니다.</p>
+                </article>
+                <article class="card">
+                    <h3>탐색 구조</h3>
+                    <p>상단 메뉴에서 원하는 정보를 빠르게 찾을 수 있습니다. 정책 페이지와 문의 경로도 쉽게 접근하도록 했습니다.</p>
+                </article>
+                <article class="card">
+                    <h3>광고 균형</h3>
+                    <p>광고는 콘텐츠의 보조 요소로만 다룹니다. 과도한 광고로 콘텐츠를 가리지 않도록 설계합니다.</p>
+                </article>
+            </div>
+            <div class="callout">
+                <p>본 사이트는 사용자 경험과 콘텐츠 가치를 우선으로 개선합니다. 운영 방식과 업데이트는 리소스 문서에서 투명하게 공유합니다.</p>
             </div>
         </section>
 
@@ -147,6 +173,7 @@
                 <p class="footer-text">가위 바위 보를 AI로 즐기는 미니 프로젝트입니다.</p>
             </div>
             <div class="footer-links">
+                <a href="resources.html">리소스</a>
                 <a href="about.html">소개</a>
                 <a href="privacy.html">개인정보처리방침</a>
                 <a href="terms.html">이용약관</a>
