--- a/privacy.html
+++ b/privacy.html
@@ -22,6 +22,7 @@
         <nav class="nav">
             <a href="index.html">홈</a>
             <a href="about.html">소개</a>
+            <a href="resources.html">리소스</a>
             <a href="privacy.html" aria-current="page">개인정보</a>
             <a href="terms.html">이용약관</a>
             <a href="contact.html">문의</a>
@@ -77,6 +78,7 @@
             <div class="footer-links">
                 <a href="index.html">홈</a>
                 <a href="about.html">소개</a>
+                <a href="resources.html">리소스</a>
                 <a href="terms.html">이용약관</a>
                 <a href="contact.html">문의</a>
             </div>
