--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
             <div>
                 <p class="footer-label">Contact</p>
-                <p class="footer-text">contact@yourdomain.com</p>
+                <p class="footer-text">goodhywon@gmail.com</p>
             </div>
         </footer>
     </main>
