--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
                 <h2>5. 문의</h2>
                 <p class="section-subtitle">개인정보 관련 문의는 아래 연락처로 부탁드립니다.</p>
             </div>
-            <p>contact@yourdomain.com</p>
+            <p>goodhywon@gmail.com</p>
         </section>
 
         <footer class="footer">
