Add AdSense script to all pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="카메라로 손 모양을 보여주면 AI가 가위/바위/보를 인식하는 인터랙티브 게임. 브라우저에서 바로 즐겨보세요.">
     <title>가위 바위 보 AI 대결 | 카메라 인식 게임</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container">
