--- a/resources.html
+++ b/resources.html
@@ -7,6 +7,8 @@
     <meta name="description" content="AI 가위바위보 프로젝트 리소스. 사용 팁, 테스트 방식, 접근성, 품질 개선 계획을 정리했습니다.">
     <title>리소스 | 가위 바위 보 AI 대결</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container page">
