--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <meta name="description" content="AI 가위바위보 프로젝트 소개. 서비스 목표, 기능, 향후 계획을 안내합니다.">
     <title>소개 | 가위 바위 보 AI 대결</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container page">
