--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,8 @@
     <meta name="description" content="AI 가위바위보 서비스 이용약관.">
     <title>이용약관 | 가위 바위 보 AI 대결</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container page">
