Add contact email to homepage and contact page

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <h2>연락처</h2>
                 <p class="section-subtitle">운영자에게 이메일로 문의해 주세요.</p>
             </div>
-            <p>goodhywon@gmail.com</p>
+            <p>goodhywon@gamil.com</p>
         </section>
 
         <section class="section">
