--- a/index.html
+++ b/index.html
@@ -659,12 +659,14 @@
       </div>
       <p class="text">
         If you find a name that looks wrong or want to suggest improvements, please use the contact
-        page and include the English spelling and your preferred Hangul output.
+        page and include the English spelling and your preferred Hangul output. You can also reach
+        us at <b>goodhywon@gamil.com</b>.
       </p>
     </section>
 
     <footer>
       © <span id="year"></span> Name → Hangul · Privacy-friendly (localStorage only) ·
+      Contact: <b>goodhywon@gamil.com</b> ·
       <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
     </footer>
   </div>
